--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,8 +174,10 @@ lint:ansible:
     - job: build:linter
       artifacts: false
   script:
+    - pwd
+    - ls -laH
     # ansible-lint uses git which checks directory ownership before running
-    - git config --add safe.directory $CI_PROJECT_DIR
+    # - git config --add safe.directory $CI_PROJECT_DIR
     - go-task ans:lint
     # Also check all other non ansible files
     - yamllint -f parsable .
