all: debug the dir variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -176,6 +176,8 @@ lint:ansible:
   script:
     - pwd
     - ls -laH
+    - echo $CI_BUILDS_DIR
+    - echo $CI_PROJECT_DIR
     # ansible-lint uses git which checks directory ownership before running
     # - git config --add safe.directory $CI_PROJECT_DIR
     - go-task ans:lint
