all: remove the extra debugging

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,11 +174,8 @@ lint:ansible:
     - job: build:linter
       artifacts: false
   script:
-    - pwd
-    - ls -laH
-    - echo $CI_BUILDS_DIR
-    - echo $CI_PROJECT_DIR
     # ansible-lint uses git which checks directory ownership before running
+    # This happens because gitlab uses 777 on the directory
     - git config --global --add safe.directory $CI_PROJECT_DIR
     - go-task ans:lint
     # Also check all other non ansible files
