replace deprecated rls with rust-analyzer

--- a/playbooks/tasks/system_redhat_packages.yml
+++ b/playbooks/tasks/system_redhat_packages.yml
@@ -70,8 +70,8 @@
     - python3-dbus
     - readline-devel
     - redhat-rpm-config
-    - rls  # Rust Language Server for IDE integration
     - rust
+    - rust-analyzer  # Rust Language Server for IDE integration
     - rust-gdb  # GDB pretty printers for Rust
     - rust-lldb  # LLDB pretty printers for Rust
     - rust-src  # Rust systems programming language - source code
