--- a/playbooks/tasks/system_redhat_packages.yml
+++ b/playbooks/tasks/system_redhat_packages.yml
@@ -22,6 +22,14 @@
       - vim
     state: present
 
+- name: RedHad - Remove conflicting packages
+  ansible.builtin.dnf:
+    name: "{{ item }}"
+    state: absent
+  loop:
+    - ffmpeg-free  # conflicts with ffmpeg
+    - libswscale-free  # conflicts with ffmpeg-libs
+
 - name: RedHat - Install packages
   ansible.builtin.dnf:
     name: "{{ item }}"
@@ -46,6 +54,7 @@
     - curl
     - dconf
     - dnf-automatic
+    - ffmpeg  # Improves video playback
     - flatpak
     - gcc
     - gcc-c++
@@ -114,7 +123,6 @@
     - dconf-editor
     - dejavu-sans-fonts
     - dkms
-    - ffmpeg  # Improves video playback
     - fuse-sshfs
     - go-task  # CLI tool for taskfiles
     - google-noto-sans-fonts
