custom fonts can be otf files

--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,13 +1,13 @@
 .DEFAULT_GOAL := install
 
-fonts_to_install := $(wildcard *.ttf)
+fonts_to_install := $(wildcard *.ttf) $(wildcard *.otf)
 fonts := $(patsubst %, ~/.local/share/fonts/%, $(fonts_to_install))
 
 ~/.local/share/fonts/:
 	mkdir -p ~/.local/share/fonts
 
 $(fonts): ~/.local/share/fonts/
-	cp *.ttf ~/.local/share/fonts/
+	cp $(fonts_to_install) ~/.local/share/fonts/
 
 .PHONY: install
 install: $(fonts)
