--- a/playbooks/tasks/system_debian_packages.yml
+++ b/playbooks/tasks/system_debian_packages.yml
@@ -38,6 +38,7 @@
     - unzip
     - wget
     - zsh
+    - zstd  # Zstandard - Fast real-time compression algorithm
 
 - name: Debian - Install non WSL packages
   ansible.builtin.apt:
