--- a/playbooks/tasks/system_redhat_repositories.yml
+++ b/playbooks/tasks/system_redhat_repositories.yml
@@ -26,7 +26,7 @@
 - name: RedHat - refresh dnf keys for 1Password  # noqa no-handler
   ansible.builtin.command: >
     dnf -q makecache -y --disablerepo='*'
-    --enablerepo='1password-beta' --enablerepo='1password-stable'
+    --enablerepo='1password-beta'
   when: rpm_key_1password.changed
   changed_when: false
 
