--- a/playbooks/files/etc/dnf/automatic.conf
+++ b/playbooks/files/etc/dnf/automatic.conf
@@ -22,6 +22,15 @@ download_updates = yes
 # install.timer override this setting.
 apply_updates = yes
 
+# When the system should reboot following upgrades:
+# never                              = don't reboot after upgrades
+# when-changed                       = reboot after any changes
+# when-needed                        = reboot when necessary to apply changes
+reboot = never
+
+# The command that is run to trigger a system reboot.
+reboot_command = "shutdown -r +5 'Rebooting after applying package updates'"
+
 
 [emitters]
 # Name to use for this system in messages that are emitted.  Default is the
@@ -42,13 +51,19 @@ emit_via = stdio,motd
 
 [email]
 # The address to send email messages from.
-email_from = root@localhost
+email_from = root@example.com
 
 # List of addresses to send messages to.
 email_to = root
 
 # Name of the host to connect to to send email messages.
 email_host = localhost
+
+# Port number to connect to at the email host.
+email_port = 25
+
+# Use TLS or STARTTLS to connect to the email host.
+email_tls = no
 
 
 [command]
@@ -73,7 +88,7 @@ email_host = localhost
 # stdin_format = "{body}"
 
 # The address to send email messages from.
-email_from = root@localhost
+email_from = root@example.com
 
 # List of addresses to send messages to.
 email_to = root
