mold is not available on debian

--- a/playbooks/tasks/system_debian_ubuntu_packages.yml
+++ b/playbooks/tasks/system_debian_ubuntu_packages.yml
@@ -8,6 +8,7 @@
   register: ubuntu_install_packages
   until: ubuntu_install_packages is succeeded
   loop:
+    - mold  # Faster linker for compiling
     - podman-docker  # emulate docker
 
 - name: Ubuntu >=18 - Install packages
