debian 12 now has mold

--- a/playbooks/tasks/system_debian_packages.yml
+++ b/playbooks/tasks/system_debian_packages.yml
@@ -26,6 +26,7 @@
     - jq
     - libcairo2-dev
     - lynis  # Security scanning tool
+    - mold  # Faster linker for compiling
     - nodejs
     - pkg-config
     - podman
