--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,6 +141,12 @@ build:ubuntu:22.04:
   script:
     - ./.gitlab/build_image.sh ubuntu 22.04
 
+build:ubuntu:24.04:
+  extends:
+    - .build_img
+  script:
+    - ./.gitlab/build_image.sh ubuntu 24.04
+
 lint:shellcheck:
   extends:
     - .rules_lint
@@ -229,13 +235,25 @@ test:fedora:rawhide:
   allow_failure: true
 
 test:ubuntu:22.04:
-  # EOL: 2027-04
+  # EOL: 2027-05
   extends:
     - .test
     - .rules_debian
   image: ${CI_REGISTRY}/perobertson/scripts/ubuntu:22.04-${CI_COMMIT_REF_SLUG}
   needs:
     - job: build:ubuntu:22.04
+      artifacts: false
+    - job: lint:ansible
+      artifacts: false
+
+test:ubuntu:24.04:
+  # EOL: 2029-06
+  extends:
+    - .test
+    - .rules_debian
+  image: ${CI_REGISTRY}/perobertson/scripts/ubuntu:24.04-${CI_COMMIT_REF_SLUG}
+  needs:
+    - job: build:ubuntu:24.04
       artifacts: false
     - job: lint:ansible
       artifacts: false
