--- a/playbooks/tasks/system_redhat_fedora_repositories.yml
+++ b/playbooks/tasks/system_redhat_fedora_repositories.yml
@@ -37,6 +37,50 @@
   register: rpmfusion_nonfree_install
   until: rpmfusion_nonfree_install is succeeded
 
+- name: Fedora - Install tenv updater dependencies
+  ansible.builtin.dnf:
+    name:
+      - createrepo_c
+      - curl
+      - jq
+      - make
+      - rpm
+      - sed
+    state: present
+
+- name: Fedora - install tenv updater script
+  community.general.make:
+    chdir: /opt/tenv-yum-repo
+    target: install-script
+
+# Download the tenv packages and build a local yum repo
+- name: Fedora - run tenv updater
+  ansible.builtin.command: /usr/local/bin/tenv-yum-repo-update.bash
+  args:
+    creates: /var/lib/tenv-yum-repo/repodata/repomd.xml
+
+# Add the local yum repo config so dnf discovers tenv
+- name: Fedora - install tenv updater repo
+  community.general.make:
+    chdir: /opt/tenv-yum-repo
+    target: install-repo
+
+- name: Fedora - install tenv updater service
+  community.general.make:
+    chdir: /opt/tenv-yum-repo
+    target: install-service
+  when:
+    - stat_run_systemd.stat.exists
+    - stat_run_systemd.stat.isdir
+
+- name: Fedora - start tenv updater service
+  community.general.make:
+    chdir: /opt/tenv-yum-repo
+    target: start-service
+  when:
+    - stat_run_systemd.stat.exists
+    - stat_run_systemd.stat.isdir
+
 - name: Fedora - Install zoom updater dependencies
   ansible.builtin.dnf:
     name:
