--- a/playbooks/tasks/system_redhat_packages.yml
+++ b/playbooks/tasks/system_redhat_packages.yml
@@ -121,6 +121,10 @@
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
+  retries: 3
+  delay: 5
+  register: redhat_install_optional_packages
+  until: redhat_install_optional_packages is succeeded
   loop:
     - crudini
     - dconf-editor
