--- a/playbooks/tasks/system_redhat_repositories.yml
+++ b/playbooks/tasks/system_redhat_repositories.yml
@@ -139,6 +139,14 @@
   register: rpmfusion_nonfree_updates_repo
 
 # Install of dependencies is specific to the os family
+- name: RedHat - update tenv-yum-repo  # noqa latest
+  diff: false
+  ansible.builtin.git:
+    repo: https://gitlab.com/perobertson/tenv-yum-repo.git
+    dest: /opt/tenv-yum-repo
+  register: git_tenv_yum_repo
+
+# Install of dependencies is specific to the os family
 - name: RedHat - update zoom-yum-repo  # noqa latest
   diff: false
   ansible.builtin.git:
