install zoom on fedora

--- a/playbooks/tasks/system_redhat_fedora_packages.yml
+++ b/playbooks/tasks/system_redhat_fedora_packages.yml
@@ -33,6 +33,7 @@
     - sqlitebrowser
     - tenv  # OpenTofu version manager
     - texlive-montserrat
+    - zoom
 
     # TODO: move this to redhat when centos gets support
     - podman-compose  # emulate docker-compose
