--- a/playbooks/tasks/system_redhat_packages.yml
+++ b/playbooks/tasks/system_redhat_packages.yml
@@ -22,7 +22,7 @@
       - vim
     state: present
 
-- name: RedHad - Remove conflicting packages
+- name: RedHat - Remove conflicting packages
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: absent
