simplify debian installs

--- a/playbooks/tasks/system_debian_packages.yml
+++ b/playbooks/tasks/system_debian_packages.yml
@@ -24,10 +24,12 @@
     - gitk
     - htop
     - jq
+    - kubernetes-client  # kubectl
     - libcairo2-dev
     - lynis  # Security scanning tool
     - mold  # Faster linker for compiling
     - nodejs
+    - npm
     - pkg-config
     - podman
     - python3-dbus
