--- a/playbooks/tasks/system_debian_debian_packages.yml
+++ b/playbooks/tasks/system_debian_debian_packages.yml
@@ -1,25 +1,12 @@
+# Debian EOL dates https://wiki.debian.org/DebianReleases/
 ---
-- name: Debian >=10 - Install packages
+- name: Debian - Install packages
   ansible.builtin.apt:
     pkg: "{{ item }}"
     state: present
   retries: 3
   delay: 5
-  register: debian10_install_packages
-  until: debian10_install_packages is succeeded
+  register: debian_debian_install_packages
+  until: debian_debian_install_packages is succeeded
   when: ansible_distribution_major_version | int >= 10
-  loop:
-    - npm
-
-- name: Debian >=11 - Install packages
-  ansible.builtin.apt:
-    pkg: "{{ item }}"
-    state: present
-  retries: 3
-  delay: 5
-  register: debian11_install_packages
-  until: debian11_install_packages is succeeded
-  when: ansible_distribution_major_version | int >= 11
-  loop:
-    - kubernetes-client  # kubectl
-    - python3-cairo  # required to fix default python
+  loop: []
