--- a/playbooks/tasks/system_debian_debian_packages.yml
+++ b/playbooks/tasks/system_debian_debian_packages.yml
@@ -9,4 +9,5 @@
   register: debian_debian_install_packages
   until: debian_debian_install_packages is succeeded
   when: ansible_distribution_major_version | int >= 10
-  loop: []
+  loop:
+    - kubernetes-client  # kubectl
