require fedora41 to pass CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,6 +112,12 @@ build:fedora:41:
     - .build_img
   script:
     - ./.gitlab/build_image.sh fedora 41
+
+build:fedora:42:
+  extends:
+    - .build_img
+  script:
+    - ./.gitlab/build_image.sh fedora 42
   # unreleased
   when: manual
   allow_failure: true
@@ -186,6 +192,18 @@ test:fedora:41:
   image: ${CI_REGISTRY_IMAGE}/fedora:41-${CI_COMMIT_REF_SLUG}
   needs:
     - job: build:fedora:41
+      artifacts: false
+    - job: lint:ansible
+      artifacts: false
+
+test:fedora:42:
+  # EOL: ~2026-04-22
+  extends:
+    - .test
+    - .rules_redhat
+  image: ${CI_REGISTRY_IMAGE}/fedora:42-${CI_COMMIT_REF_SLUG}
+  needs:
+    - job: build:fedora:42
       artifacts: false
     - job: lint:ansible
       artifacts: false
